added entities to uml 	renamed:    Main.java -> Amanda.java 	new file:   Blob.java 	new file:   ClassFile.java
note:
    file renames done through netbeans will show as delete/create and not renames. renames done through git cp will not have class changed, this must be done manually.

--- a/Amanda/nbproject/project.properties
+++ b/Amanda/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=donnoe.amanda.Main
+main.class=donnoe.amanda.Amanda
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
