created verbose flag in AManda that is set from args. made a printer that consumes updates or prints them out.
read in magic number and version numbers of .class file.

	new file:   .gitignore
		added commit msg file to add to default and added it to gitignore

added matching features to uml

--- a/Amanda/nbproject/private/private.properties
+++ b/Amanda/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=build/classes/donnoe/amanda/Main.class
+application.args=build/classes/donnoe/amanda/Amanda.class v
 compile.on.save=true
 do.depend=false
 do.jar=true
